# vector-search-service

./: .gitignore  CMakeLists.txt  Makefile  README.md  playground.cpp
docs/: install.md  todo.md
scripts/: run_sharded.sh  run_single.sh
src/cpp/: algo.h  algo_test.cc  faiss_index_service.cc  faiss_index_service.h  faiss_index_service_main.cc  sharded_index_service.cc  sharded_index_service.h  sharded_index_service_main.cc
src/proto/: index_service.proto
src/python/: requirements.txt  test_index_service.py
